Implement DeviceImpl and Path class, and minor change
Change-Id: I666d6d7e00620220048c5f8031a7c7c149ec89cd